--- a/labs/Lab_08_events_js/Solution/Task2/Style.css
+++ b/labs/Lab_08_events_js/Solution/Task2/Style.css
@@ -1,11 +1,9 @@
-.Buttons {
-
-    border-radius: 30px;
-    color: rgb(17, 13, 13);
-    margin-top: 24px;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+.TextLabel{
     font-size: 32px;
+    margin: 10px;
+}
+.ColorsSelector{
+    width: 400px;
+    height: 400px;
+    border: 1px solid black;
 }
